# personal-rag-mcp

./: .env.example  LICENSE  README.md  analysis.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: search.mdc
evals/: attacks.jsonl  cursor_grades.md  model_response.jsonl  qa_set.jsonl
scripts/: eval.py  ingest.py
src/rag/: api.py  chunker.py  embed.py  generate.py  guards.py  loaders.py  mcp_server.py  pipeline.py  reranker.py  retrieve.py  test_retrieval.py  vectorstore.py
