[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "personal-rag-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
 "fastapi>=0.115",
 "uvicorn[standard]>=0.30",
 "pydantic>=2.8",
 "openai>=1.50",
 "anthropic>=0.40",
 "langchain>=0.3",
 "langchain-community>=0.3",
 "langchain-openai>=0.2",
 "langchain-google-vertexai",
 "langchain-google-genai",
 "langchain-huggingface",
 "psycopg[binary]>=3.2",
 "pgvector>=0.3",
 "rank-bm25>=0.2",
 "tiktoken>=0.8",
 "pypdf>=5.0",
 "unstructured[md]>=0.15",
 "sentence-transformers>=3.0",   # for local cross-encoder reranker
 "ragas>=0.2",
 "mcp>=1.0",
 "python-dotenv>=1.0",
 "opentelemetry-api>=1.27",
 "opentelemetry-sdk>=1.27",
]


[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6", "mypy>=1.11"]
